Update version and add README.md